[gd_scene load_steps=22 format=3 uid="uid://bqldi14hjdj3t"]

[ext_resource type="PackedScene" uid="uid://tximpab5mrch" path="res://entities/Player/Player.tscn" id="1_h7krl"]
[ext_resource type="Script" path="res://entities/PlayerSonic/PlayerSonic.gd" id="2_gfmlf"]
[ext_resource type="Script" path="res://entities/PlayerSonic/SonicParameters.gd" id="3_3q6jm"]
[ext_resource type="PackedScene" uid="uid://dxw1ws66bfvth" path="res://models/Sonic/sonic_model.tscn" id="3_d1b4a"]
[ext_resource type="Texture2D" uid="uid://dnwju36a7f23x" path="res://models/Sonic/Ball.png" id="3_w8k11"]
[ext_resource type="PackedScene" uid="uid://bkhmplefq77tp" path="res://effects/AfterimageOrb/AfterimageOrbEmitter.tscn" id="5_foc4m"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://cpldlngx4kjuf" path="res://entities/PlayerSonic/Sonic_AnimTree.tres" id="7_ify46"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Teetering.gd" id="9_gq1o4"]
[ext_resource type="Script" path="res://entities/PlayerSonic/BallAir.gd" id="10_afy6q"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Ball.gd" id="11_oo7vq"]
[ext_resource type="Script" path="res://entities/PlayerSonic/SquatCharge.gd" id="17_x2v8p"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Move.gd" id="18_608ep"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Jump.gd" id="19_cgo5d"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Fall.gd" id="20_nmo58"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Airdash.gd" id="21_16mxj"]
[ext_resource type="Script" path="res://entities/PlayerSonic/SpinKick.gd" id="22_n0qhp"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Pose.gd" id="23_oq4j6"]
[ext_resource type="Script" path="res://entities/Player/Wipeout.gd" id="25_du4gh"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Swap.gd" id="28_3ketm"]
[ext_resource type="Script" path="res://entities/PlayerSonic/VictoryPose.gd" id="29_o7p3b"]
[ext_resource type="Script" path="res://entities/PlayerSonic/Push.gd" id="30_caun3"]

[node name="PlayerSonic" instance=ExtResource("1_h7krl")]
script = ExtResource("2_gfmlf")
Parameters = ExtResource("3_3q6jm")
Invincible = false

[node name="SonicModel" parent="CharacterMesh" index="0" instance=ExtResource("3_d1b4a")]

[node name="Skeleton3D" parent="CharacterMesh/SonicModel/Armature" index="0"]
bones/0/rotation = Quaternion(0, 0.707107, 0.707107, 0)
bones/1/position = Vector3(3.93898e-08, 0.450566, 2.97949)
bones/1/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)
bones/2/position = Vector3(-5.13685, 0.250315, 3.16521)
bones/2/rotation = Quaternion(3.43547e-08, -0.785943, 0.618299, -2.70267e-08)
bones/2/scale = Vector3(1, 1, 1)
bones/3/position = Vector3(-2.48036, 1.78814e-07, 1.32379)
bones/3/rotation = Quaternion(0, 0, 0, 1)
bones/4/position = Vector3(5.13685, 0.250315, 3.16521)
bones/4/rotation = Quaternion(3.43547e-08, -0.785943, 0.618299, -2.70267e-08)
bones/4/scale = Vector3(1, 1, 1)
bones/5/position = Vector3(2.48036, 1.78814e-07, 1.32379)
bones/5/rotation = Quaternion(0, 0, 0, 1)
bones/6/position = Vector3(3.93898e-08, 0.450566, 5.21844)
bones/6/rotation = Quaternion(3.09086e-08, 0.707107, 0.707107, 3.09086e-08)

[node name="ba3DBody" type="BoneAttachment3D" parent="CharacterMesh/SonicModel/Armature/Skeleton3D" index="4"]
transform = Transform3D(1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, 1, -3.93898e-08, 2.97949, 0.450566)
bone_name = "Head_2"
bone_idx = 1

[node name="AfterimageOrbEmitter" parent="CharacterMesh/SonicModel/Armature/Skeleton3D/ba3DBody" index="0" node_paths=PackedStringArray("SceneRoot") instance=ExtResource("5_foc4m")]
SceneRoot = NodePath("../../../../../..")
Size = 1.25
Colour = Color(0, 0.287371, 0.725397, 1)

[node name="ba3DHandL" type="BoneAttachment3D" parent="CharacterMesh/SonicModel/Armature/Skeleton3D" index="5"]
transform = Transform3D(1, 2.05804e-08, -8.49658e-08, 1.77636e-14, -0.971896, -0.235412, -8.74228e-08, 0.235412, -0.971896, 5.13685, 3.16521, 0.250315)
bone_name = "Hand.L"
bone_idx = 2

[node name="AfterimageOrbEmitter" parent="CharacterMesh/SonicModel/Armature/Skeleton3D/ba3DHandL" index="0" node_paths=PackedStringArray("SceneRoot") instance=ExtResource("5_foc4m")]
SceneRoot = NodePath("../../../../../..")
Size = 0.5

[node name="ba3DHandR" type="BoneAttachment3D" parent="CharacterMesh/SonicModel/Armature/Skeleton3D" index="6"]
transform = Transform3D(1, 2.05804e-08, -8.49658e-08, 1.77636e-14, -0.971896, -0.235412, -8.74228e-08, 0.235412, -0.971896, -5.13685, 3.16521, 0.250315)
bone_name = "Hand.R"
bone_idx = 4

[node name="AfterimageOrbEmitter" parent="CharacterMesh/SonicModel/Armature/Skeleton3D/ba3DHandR" index="0" node_paths=PackedStringArray("SceneRoot") instance=ExtResource("5_foc4m")]
SceneRoot = NodePath("../../../../../..")
Size = 0.5

[node name="ba3DFootL" type="BoneAttachment3D" parent="CharacterMesh/SonicModel/Armature/Skeleton3D" index="7"]
transform = Transform3D(-1, 0, 0, 0, 0, 1, 0, 1, 0, 2.48036, 1.32379, 1.78814e-07)
bone_name = "Foot.L"
bone_idx = 3

[node name="AfterimageOrbEmitter" parent="CharacterMesh/SonicModel/Armature/Skeleton3D/ba3DFootL" index="0" node_paths=PackedStringArray("SceneRoot") instance=ExtResource("5_foc4m")]
SceneRoot = NodePath("../../../../../..")
Size = 0.5
Colour = Color(1, 0.145098, 0.141176, 1)

[node name="ba3DFootR" type="BoneAttachment3D" parent="CharacterMesh/SonicModel/Armature/Skeleton3D" index="8"]
transform = Transform3D(-1, 0, 0, 0, 0, 1, 0, 1, 0, -2.48036, 1.32379, 1.78814e-07)
bone_name = "Foot.R"
bone_idx = 5

[node name="AfterimageOrbEmitter" parent="CharacterMesh/SonicModel/Armature/Skeleton3D/ba3DFootR" index="0" node_paths=PackedStringArray("SceneRoot") instance=ExtResource("5_foc4m")]
SceneRoot = NodePath("../../../../../..")
Size = 0.5
Colour = Color(1, 0.145098, 0.141176, 1)

[node name="SonicBall" type="Sprite3D" parent="CharacterMesh" index="1"]
visible = false
sorting_offset = 2.0
pixel_size = 0.03
billboard = 1
alpha_cut = 1
texture_filter = 0
texture = ExtResource("3_w8k11")

[node name="AnimationTree" parent="." index="14"]
root_node = NodePath("../CharacterMesh/SonicModel")
tree_root = ExtResource("7_ify46")
anim_player = NodePath("../CharacterMesh/SonicModel/AnimationPlayer")
parameters/Air/blend_amount = 0
parameters/AirSpinKick/blend_amount = 0
parameters/Death/blend_amount = 0
parameters/Ground/blend_amount = 0
parameters/GroundSecondary/blend_amount = 0
parameters/Hang/blend_amount = 0
parameters/Hurt/blend_amount = 0
parameters/Idle/blend_amount = 0
parameters/Movement/blend_amount = 0
parameters/OSHang/active = false
parameters/OSHang/internal_active = false
parameters/OSHang/request = 0
parameters/OSHurt/active = false
parameters/OSHurt/internal_active = false
parameters/OSHurt/request = 0
parameters/OSLand/active = false
parameters/OSLand/internal_active = false
parameters/OSLand/request = 0
parameters/OSPose/active = false
parameters/OSPose/internal_active = false
parameters/OSPose/request = 0
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0
parameters/Push/blend_amount = 0.0
parameters/Run/blend_amount = 0
parameters/StrikeDash/blend_amount = 0
parameters/TSHang/scale = 1.0
parameters/TSRun/scale = 1.0
parameters/TSSprint/scale = 1.0
parameters/TSStrikeDash/scale = 1.0
parameters/TSWalk/scale = 1.0
parameters/Teetering/blend_amount = 0
parameters/TeeteringLevel/blend_amount = 0
parameters/TimeScale/scale = 1.0
"parameters/TimeScale 10/scale" = 1.0
"parameters/TimeScale 11/scale" = 1.0
"parameters/TimeScale 12/scale" = 1.0
"parameters/TimeScale 13/scale" = 1.0
"parameters/TimeScale 14/scale" = 1.0
"parameters/TimeScale 15/scale" = 1.0
"parameters/TimeScale 16/scale" = 1.0
"parameters/TimeScale 17/scale" = 1.0
"parameters/TimeScale 18/scale" = 1.0
"parameters/TimeScale 19/scale" = 1.0
"parameters/TimeScale 2/scale" = 1.0
"parameters/TimeScale 3/scale" = 1.0
"parameters/TimeScale 4/scale" = 1.0
"parameters/TimeScale 5/scale" = 1.0
"parameters/TimeScale 6/scale" = 1.0
"parameters/TimeScale 7/scale" = 1.0
"parameters/TimeScale 8/scale" = 1.0
"parameters/TimeScale 9/scale" = 1.0

[node name="Teetering" type="Node" parent="StateMachine" index="2"]
script = ExtResource("9_gq1o4")

[node name="Ball" type="Node" parent="StateMachine" index="3"]
script = ExtResource("11_oo7vq")

[node name="BallAir" type="Node" parent="StateMachine" index="4"]
script = ExtResource("10_afy6q")

[node name="SquatCharge" type="Node" parent="StateMachine" index="5"]
script = ExtResource("17_x2v8p")

[node name="Airdash" type="Node" parent="StateMachine" index="6"]
script = ExtResource("21_16mxj")

[node name="TimerAirdash" type="Timer" parent="StateMachine/Airdash" index="0"]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="SpinKick" type="Node" parent="StateMachine" index="7"]
script = ExtResource("22_n0qhp")

[node name="Pose" type="Node" parent="StateMachine" index="8"]
script = ExtResource("23_oq4j6")

[node name="Wipeout" type="Node" parent="StateMachine" index="9"]
script = ExtResource("25_du4gh")

[node name="Swap" type="Node" parent="StateMachine" index="10"]
script = ExtResource("28_3ketm")

[node name="VictoryPose" type="Node" parent="StateMachine" index="11"]
script = ExtResource("29_o7p3b")

[node name="Move" parent="StateMachine" index="13"]
script = ExtResource("18_608ep")

[node name="Push" parent="StateMachine" index="14"]
script = ExtResource("30_caun3")

[node name="Jump" parent="StateMachine" index="20"]
script = ExtResource("19_cgo5d")

[node name="Fall" parent="StateMachine" index="22"]
script = ExtResource("20_nmo58")

[connection signal="timeout" from="StateMachine/Airdash/TimerAirdash" to="StateMachine/Airdash" method="_on_timer_airdash_timeout"]

[editable path="CharacterMesh/SonicModel"]
